<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineZonesFirst"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvZoneLabel"
        style="@style/LabelsTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zone_label"
        app:layout_constraintEnd_toEndOf="@id/guidelineZonesFirst"
        app:layout_constraintStart_toStartOf="@id/guidelineZonesFirst"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineZonesSecond"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPercentageLabel"
        style="@style/LabelsTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ftp_percentage_label"
        app:layout_constraintEnd_toEndOf="@id/guidelineZonesSecond"
        app:layout_constraintStart_toStartOf="@id/guidelineZonesSecond"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineZonesThird"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRangeLabel"
        style="@style/LabelsTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_range_label"
        app:layout_constraintEnd_toEndOf="@id/guidelineZonesThird"
        app:layout_constraintStart_toStartOf="@id/guidelineZonesThird"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_4"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/tvZoneLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>