<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSwimLabel"
            style="@style/LabelsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/swim_label" />

        <include
            layout="@layout/layout_hour_minutes_seconds"
            android:layout_marginTop="@dimen/dimen_8"
            android:id="@+id/layoutSwimTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSwimLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTransitionLabelOne"
            style="@style/LabelsTheme"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutSwimTime"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/transition_label" />

        <include
            layout="@layout/layout_hour_minutes_seconds"
            android:layout_marginTop="@dimen/dimen_8"
            android:id="@+id/layoutTransitionOneTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTransitionLabelOne" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBikeLabel"
            style="@style/LabelsTheme"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutTransitionOneTime"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/bike_label" />

        <include
            layout="@layout/layout_hour_minutes_seconds"
            android:layout_marginTop="@dimen/dimen_8"
            android:id="@+id/layoutBikeTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvBikeLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTransitionLabelTwo"
            style="@style/LabelsTheme"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutBikeTime"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/transition_label" />

        <include
            layout="@layout/layout_hour_minutes_seconds"
            android:layout_marginTop="@dimen/dimen_8"
            android:id="@+id/layoutTransitionTwoTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTransitionLabelTwo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRunLabel"
            style="@style/LabelsTheme"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutTransitionTwoTime"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/run_label" />

        <include
            layout="@layout/layout_hour_minutes_seconds"
            android:layout_marginTop="@dimen/dimen_8"
            android:id="@+id/layoutRunTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvRunLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalLabel"
            style="@style/LabelsTheme"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutRunTime"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/total_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalTime"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTotalLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="00:00:00" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>