<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvZoneLabel"
            style="@style/LabelsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_label"
            app:layout_constraintEnd_toEndOf="@id/guidelineZonesFirst"
            app:layout_constraintStart_toStartOf="@id/guidelineZonesFirst"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineZonesFirst"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPercentageLabel"
            style="@style/LabelsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineZonesThird"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRangeLabel"
            style="@style/LabelsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            app:layout_constraintEnd_toEndOf="@id/guidelineZonesThird"
            app:layout_constraintStart_toStartOf="@id/guidelineZonesThird"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dimen_4"
            android:backgroundTint="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tvZoneLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:id="@+id/splitsRecyclerView"
            tools:listitem="@layout/layout_zones_list_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>